# CNCF-people-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  developer_journey.md
.github/workflows/: ci.yml
assets/: example.json
src/: main.rs
