[package]
name = "cncf-people-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","fs","signal"] }
reqwest = { version = "0.11", features = ["rustls-tls","gzip"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors","compression-gzip","trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
thiserror = "1"
 anyhow = "1"
humantime = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
